--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,23 +25,48 @@ header {
 	overflow: auto;
 	padding-bottom: 10px;
 	border-bottom: 3px solid #e6e6e6;
-	margin: 0px;
+	margin: 1em 0 0 0;
 	position: relative;
 }
 
 .stationary {
-	text-align: center;
+	display: inline-block;
 	padding: 20px 0;
+	width: 100%;
 }
 
-.stationary p {
-	margin: 0;
-	padding: 0;
+.identity {
+	width: auto;
+	display: inline-block;
 }
 
 .logo {
-	width: 160px;
+	width: 100px;
 	height: auto;
+}
+
+.title-intro {
+	margin: 8px 0;
+	font-family: 'Lora', serif;
+	font-style: italic;
+	font-weight: 700;
+	font-size: 18px;
+}
+
+.title-block {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 0 0 1em;
+}
+
+.title {
+	margin: 8px 0;
+	font-size: 32px;
+	line-height: 42px;
+/*	font-weight: 700;*/
+/*	font-style: italic;*/
+	font-family: 'Arvo', serif;
+/*	text-transform: uppercase;*/
 }
 
 @media (min-width: 960px) {}
