--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,7 +41,7 @@ header {
 }
 
 .logo {
-	width: 100px;
+	width: 80px;
 	height: auto;
 }
 
@@ -61,12 +61,21 @@ header {
 
 .title {
 	margin: 8px 0;
-	font-size: 32px;
-	line-height: 42px;
-/*	font-weight: 700;*/
-/*	font-style: italic;*/
+	font-size: 28px;
+	line-height: 32px;
 	font-family: 'Arvo', serif;
-/*	text-transform: uppercase;*/
+}
+
+.hero {
+	text-align: center;
+	margin: 1em 0 0 0;
+}
+
+.headline {
+	font-family: "Libre Baskerville", serif;
+	font-style: italic;
+	letter-spacing: .08em;
+	padding: 1em 0;
 }
 
 @media (min-width: 960px) {}
