--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+---
+---
 /* Page */
 
 body {
@@ -10,7 +12,7 @@ body {
 #pageWrapper {
 	margin: 12px;
 	background: #fff;
-	padding: 0 40px;
+	padding: 0 120px;
 	min-height: 800px;
 	overflow: auto;
 }
@@ -100,7 +102,7 @@ header {
 
 .hero {
 	text-align: center;
-	margin: 1em 0 0 0;
+	margin: 1em 0 4em 0;
 }
 
 .headline-intro {
