--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-/* Page */
+
 
 body {
 	margin: 0px;
@@ -12,7 +12,6 @@ body {
 #pageWrapper {
 	margin: 12px;
 	background: #fff;
-	padding: 0 120px;
 	min-height: 800px;
 	overflow: auto;
 }
@@ -38,7 +37,6 @@ header {
 .stationary {
 	display: inline-block;
 	padding: 20px 0;
-	width: 100%;
 }
 
 .identity {
@@ -105,7 +103,7 @@ header {
 	margin: 1em 0 4em 0;
 }
 
-.headline-intro {
+.headlineIntro {
 	font-family: serif;
 	font-style: italic;
 	padding: 1em 0 0;
