--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -28,10 +28,13 @@ body {
 header {
 	max-width: 1000px;
 	overflow: auto;
-	padding-bottom: 2px;
-	border-bottom: 1px solid #aaa;
 	margin: 1em 0 0 0;
 	position: relative;
+}
+
+.headerBorder {
+	border-bottom: 1px solid #aaa;
+	padding-bottom: 2px;
 }
 
 .stationary {
@@ -114,6 +117,7 @@ header {
 	font-family: "Libre Baskerville", serif;
 	font-style: italic;
 	letter-spacing: .02em;
+	line-height: 1.6em;
 }
 
 /* Sections */
