--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 				<main class="container-fluid">
 					<div class="row">
 						<div class="col-xs-12 col-md-10 col-md-offset-1">
+						{% include identity.html %}
 						{{ content }}
 						</div>
 					</div>
