additional changes to layout and navigation, added placeholder pages for our important sections

--- a/_includes/nav-exec.html
+++ b/_includes/nav-exec.html
@@ -5,7 +5,7 @@
         <li><a href="#why-care">I. Why you should care</a></li>
         <li><a href="#middle-route">II. A Middle Route</a></li>
         <li><a href="#transparency">III. Improving the Status Quo</a></li>
-        <li><a href="#process">The Process</a></li>
+        <li><a href="#what-to-do">IV. What you can do</a></li>
       </ul>
     </div>
   </div>
