--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -3,9 +3,10 @@
     <div class="nav">
       <ul class="nav-list">
         <li><a href="/executive-summary.html">Executive Summary</a></li>
-        <li><a href="#solution">Solution & Scope</a></li>
-        <li><a href="#toc">Table of Contents</a></li>
-        <li><a href="#process">The Process</a></li>
+        <li><a href="/background.html">Background</a></li>
+        <li><a href="/model-language.html">Model Language</a></li>
+        <li><a href="/conclusions.html">Conclusions</a></li>
+        <li><a href="/chart.html">Chart of Potential Data Points</a></li>
       </ul>
     </div>
   </div>
